<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/fondo_app2"
    tools:context=".p3_dificultad">

    <Button
        android:id="@+id/p3_buttonDifBaja"
        style="@style/buttonStyleBig"
        android:layout_width="550dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:text="@string/button_DifBaja" />

    <Button
        android:id="@+id/p3_buttonDifMedia"
        style="@style/buttonStyleBig"
        android:layout_width="550dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="300dp"
        android:text="@string/button_DifMedia" />

    <Button
        android:id="@+id/p3_buttonDifAlta"
        style="@style/buttonStyleBig"
        android:layout_width="550dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="500dp"
        android:text="@string/button_DifAlta" />

    <Button
        android:id="@+id/p1_buttonAyuda"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:layout_marginTop="610dp"
        android:textSize="25sp"
        android:text="@string/button_Ayuda"
        android:textColor="@color/colorAmarillo" />

    <Button
        android:id="@+id/p3_buttonArrowBack"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/arrow_back" />

</RelativeLayout>